Fix some css in admin manage profiles. Problem persists with footer overlapping bottom of content in container

--- a/views/styles/admin-manage-users.css
+++ b/views/styles/admin-manage-users.css
@@ -1,7 +1,6 @@
 .container {
   display: grid;
-  grid-template-rows: 10% 30% 1fr;
-  grid-template-columns: 100%;
+  grid-template-rows: 10% 1fr;
 }
 
 h2, h3 {
@@ -9,7 +8,6 @@ h2, h3 {
 }
 
 .dashboard-header {
-  grid-column: 1 / span 3;
   grid-row: 1 / span 1;
   display: flex;
   justify-content: center;
@@ -18,29 +16,12 @@ h2, h3 {
 }
 
 #dashboard-title {
-  font-size: 2rem;
   text-align: center;
   margin: 0;
 }
 
 .admin-wrapper {
-  display: grid;
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 3;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr 25% 1fr;
-  margin-bottom: 1rem;
-}
-
-#user-profiles {
-  grid-column: 1 / span 2;
-  grid-row: 3 / span 1;
-}
-
-#admin-profiles {
-  grid-column: 1 / span 2;
   grid-row: 2 / span 1;
-  margin-top: 2rem;
 }
 
 .user-card,
@@ -48,7 +29,8 @@ h2, h3 {
   box-shadow: 0 0 15px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   height: 110px;
-  width: 340px;
+  min-width: 300px;
+  width: 60%;
   padding: 2px;
   display: flex;
   flex-direction: row;
